--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
+    // https://mvnrepository.com/artifact/com.github.kstyrc/embedded-redis
+    testImplementation group: 'com.github.kstyrc', name: 'embedded-redis', version: '0.6'
+    testImplementation group: 'org.testcontainers', name: 'mysql', version: '1.15.3'
 }
 
 dependencyManagement {
