--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -65,4 +65,5 @@ jobs:
               --name pourrfot-cas \
               --env SPRING_DATASOURCE_URL=${{ secrets.ALIYUN_RDS_CONNECTION_URL }} \
               --env SPRING_DATASOURCE_PASSWORD=${{ secrets.ALIYUN_RDS_POURRFOT_PASSWORD }} \
+              --env SPRING_REDIS_HOST=${{ secrets.REDIS_HOST }} \
               $IMAGE_URL
