--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
+    id "com.adarshr.test-logger" version "3.0.0"
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'cn.edu.shu'
@@ -45,7 +47,6 @@ dependencies {
     testImplementation 'org.testcontainers:junit-jupiter'
     // https://mvnrepository.com/artifact/com.github.kstyrc/embedded-redis
     testImplementation group: 'com.github.kstyrc', name: 'embedded-redis', version: '0.6'
-    testImplementation group: 'org.testcontainers', name: 'mysql', version: '1.15.3'
 }
 
 dependencyManagement {
@@ -57,3 +58,13 @@ dependencyManagement {
 test {
     useJUnitPlatform()
 }
+
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+}
+
+check.dependsOn jacocoTestReport
